feat: add interaction example

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="node_modules/ol/ol.css" />
     <style>
       .map {
-        width: 100%;
+        width: 800px;
         height: 400px;
       }
     </style>
