fix: remove margins and controls

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>Simple Map</title>
     <link rel="stylesheet" href="node_modules/ol/ol.css" />
     <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
       .map {
         width: 800px;
         height: 400px;
+        background: #eee;
       }
     </style>
   </head>
